--- a/AutoPilotSample.adoc
+++ b/AutoPilotSample.adoc
@@ -1,8 +1,8 @@
 [source]
 ----
-./gradlew cf-rename-app -Pcf.newName=old-app-venerable
+./gradlew cf-rename-app -Pcf.newName=cf-show-env-venerable
 
 ./gradlew cf-push
 
-./gradlew cf-delete-app -Pcf.name=old-app-venerable
+./gradlew cf-delete-app -Pcf.name=cf-show-env-venerable
 ----
